[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["TayamaYuto <tayama.yuto@icloud.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
